--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -3,7 +3,9 @@ block.0 = minecraft:cocoa minecraft:activator_rail minecraft:detector_rail minec
 minecraft:white_stained_glass_pane minecraft:orange_stained_glass_pane minecraft:magenta_stained_glass_pane minecraft:light_blue_stained_glass_pane minecraft:yellow_stained_glass_pane minecraft:lime_stained_glass_pane minecraft:pink_stained_glass_pane minecraft:gray_stained_glass_pane minecraft:light_gray_stained_glass_pane minecraft:cyan_stained_glass_pane minecraft:purple_stained_glass_pane minecraft:blue_stained_glass_pane minecraft:brown_stained_glass_pane minecraft:green_stained_glass_pane minecraft:red_stained_glass_pane minecraft:black_stained_glass_pane \
 minecraft:lever minecraft:tripwire_hook minecraft:ladder minecraft:rail minecraft:redstone_wire minecraft:redstone_wall_torch:lit=false \
 minecraft:flower_pot minecraft:potted_dandelion minecraft:potted_poppy minecraft:potted_blue_orchid minecraft:potted_allium minecraft:potted_azure_bluet minecraft:potted_red_tulip minecraft:potted_orange_tulip minecraft:potted_white_tulip minecraft:potted_pink_tulip minecraft:potted_oxeye_daisy minecraft:potted_cornflower minecraft:potted_lily_of_the_valley minecraft:potted_wither_rose minecraft:potted_oak_sapling minecraft:potted_spruce_sapling minecraft:potted_birch_sapling minecraft:potted_jungle_sapling minecraft:potted_acacia_sapling minecraft:potted_dark_oak_sapling minecraft:potted_red_mushroom minecraft:potted_brown_mushroom minecraft:potted_fern minecraft:potted_dead_bush minecraft:potted_cactus minecraft:potted_bamboo minecraft:potted_crimson_fungus minecraft:potted_warped_fungus minecraft:potted_crimson_roots minecraft:potted_warped_roots \
-minecraft:lectern minecraft:oak_sign minecraft:spruce_sign minecraft:jungle_sign minecraft:birch_sign minecraft:acacia_sign minecraft:dark_oak_sign minecraft:crimson_sign minecraft:warped_sign \
+minecraft:lectern \
+minecraft:oak_sign minecraft:spruce_sign minecraft:jungle_sign minecraft:birch_sign minecraft:acacia_sign minecraft:dark_oak_sign minecraft:crimson_sign minecraft:warped_sign \
+minecraft:oak_wall_sign minecraft:spruce_wall_sign minecraft:jungle_wall_sign minecraft:birch_wall_sign minecraft:acacia_wall_sign minecraft:dark_oak_wall_sign minecraft:crimson_wall_sign minecraft:warped_wall_sign \
 minecraft:cake minecraft:iron_bars minecraft:bell minecraft:piston_head \
 minecraft:piston:extended=true:facing=east minecraft:piston:extended=true:facing=west minecraft:piston:extended=true:facing=north minecraft:piston:extended=true:facing=south minecraft:piston:extended=true:facing=down \
 minecraft:grindstone minecraft:campfire:lit=false minecraft:soul_campfire:lit=false \
@@ -614,7 +616,7 @@ block.67 = minecraft:lava
 
 #block.68 =
 block.69 = minecraft:soul_torch
-#block.70 = 
+#block.70 =
 
 #block.71 = minecraft:lantern:hanging=false
 #block.72 = minecraft:lantern:hanging=true
@@ -681,6 +683,6 @@ minecraft:tube_coral_fan minecraft:brain_coral_fan minecraft:bubble_coral_fan mi
 minecraft:dead_tube_coral_fan minecraft:dead_brain_coral_fan minecraft:dead_bubble_coral_fan minecraft:dead_fire_coral_fan minecraft:dead_horn_coral_fan \
 minecraft:attached_pumpkin_stem minecraft:attached_melon_stem \
 minecraft:small_dripleaf minecraft:big_dripleaf minecraft:big_dripleaf_stem minecraft:hanging_roots \
-ecotones:moss ecotones:spruce_leaf_pile ecotones:birch_leaf_pile ecotones:oak_leaf_pile ecotones:jungle_leaf_pile ecotones:duckweed ecotones:clover ecotones:pinecone 
+ecotones:moss ecotones:spruce_leaf_pile ecotones:birch_leaf_pile ecotones:oak_leaf_pile ecotones:jungle_leaf_pile ecotones:duckweed ecotones:clover ecotones:pinecone
 # Special blocks
 block.252 = minecraft:water
